Consolidated code related to parallel execution only